Feat: 사용자 도메인 추가 & 책 및 사용자 CRUD 리팩토링
- Builder 적용 및 중복 체크 개선
- User, Book 엔티티 및 DTO에 @Builder(toBuilder = true) 추가
- update 메서드에서 toBuilder() 활용해 가독성 향상
- BookService에서 title+author 복합 중복 체크 구현
- 컨트롤러에서 불필요한 null 체크 제거, 예외 처리 일원화